Improved File Structure

--- a/mysecond.html
+++ b/mysecond.html
@@ -11,7 +11,7 @@
     <div class="Header">
 
 
-        <img src="logo.jpg" alt="image1">
+        <img src="./images/logo.jpg" alt="image1">
 
         <div class="space">
 
@@ -50,21 +50,21 @@
     <div class="Picture3">
 
         <div class="pic1">
-        <img src="pic1.jpg" alt="">
+        <img src="./images/pic1.jpg" alt="">
         <h2> McDonald's </h2>
         </div>
 
         <div class="pizza">
-            <img src="pizza.jpg" alt="pizzapic">
+            <img src="./images/pizza.jpg" alt="pizzapic">
             <h2> Broadway Pizza </h2>
         </div>
 
         <div class="chinese">
-            <img src="chinese.jpg" alt="chinesepic">
+            <img src="./images/chinese.jpg" alt="chinesepic">
             <h2> Foods Inn </h2>
         </div>
         <div class="pic1">
-            <img src="pic1.jpg" alt="">
+            <img src="./images/pic1.jpg" alt="">
             <h2> Burger King </h2>
             </div>
 
